<resources>
    <string name="app_name">AgriSmart</string>
    <string name="drawer_open">Drawer Open</string>
    <string name="drawer_close">Drawer Close</string>
    <string name="notifications">Notifications</string>
    <string name="info">Device Info</string>
    <string name="weather">Weather</string>
    <string name="suggestion">Suggestion</string>
    <string name="soil">Soil</string>
    <string name="recent">recent</string>
    <string name="map_type_none">None</string>
    <string name="map_type_normal">Normal</string>
    <string name="map_type_terrain">Terrain</string>
    <string name="map_type_satellite">Satellite</string>
    <string name="map_type_hybrid">Hybrid</string>
    <string name="battery_fragment">Battery fragment</string>
    <string name="info_fragment">info_fragment</string>
    <string name="notification_fragment">notification_fragment</string>
    <string name="soil_fragment">soil_fragment</string>
    <string name="weather_fragment">weather_fragment</string>
    <string name="map_fragment">Map will be displayed</string>
    <string name="device_temp_fragment">Device Temprature will be displayed</string>
    <string name="weather_condition_fragment">Weather Conditions will be displayed</string>
    <string name="rain_probability_fragment">Rain Probabiltiy will be displayed</string>
    <string name="Illumination_fragment">Illumination value will be displayed</string>
    <string name="soil_humidity_fragment">Soil Humidity value will be displayed</string>
    <string name="Soil_ph_fragment">Soil pH value will be displayed</string>
    <string name="Soil_npk_fragment">Soil NPK value will be displayed</string>
    <string name="Soil_fertilizers_fragment">Soil fertilizers will be displayed</string>
    <string name="Soil_pesticides_fragment">Soil pesticides will be displayed</string>
    <string name="Soil_crop_suggestions_fragment">Soil crop suggestions will be displayed</string>
    <string name="n_clear_all">Clear All</string>
    <string name="com.twitter.sdk.android.CONSUMER_KEY">cww2L1i0rfT6xhLOxWZiuAXo3</string>
    <string name="com.twitter.sdk.android.CONSUMER_SECRET">Ya9kXIqycl39QkyvsMm8fMa3TYbxncCcVFMHdeEsZREmIKPdlx</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_maps">Map</string>
    <string name="automatic_data">Device Information</string>
    <string name="permission_title">Notification</string>
    <string name="permission_detail">Will provide you notifications of battery , important soil information and weather informations</string>
    <string name="choose_the_song">Weather Report</string>
    <string name="edit_data">Soil details</string>
    <string name="result_awesome">Crop suggestion</string>
    <string name="continue_and_learn">.</string>
    <string name="continue_and_update">.</string>
    <string name="continue_and_result">.</string>
    <string name="thank_you">Thank you</string>
    <string name="gm_finds_photos">The Device information includes the location of the device , Battery details of the product and also its current conditions</string>
    <string name="swap_to_the_tab">The weather details will be uploaded here , Rain Probability , The Illuminations and other details can be seen here</string>
    <string name="update_easily">The Soil NPK,Soil Humidity and Soil Temprature Data can be viewed</string>
    <string name="after_updating">The Suggestions will be given based on the data collected regarding the Crops to grow , Fertilizers and Pesticides that can be used </string>
    <string name="lpaddy">&lt;a href="https://en.wikipedia.org/wiki/Paddy_field">To know more>>&lt;/a></string>
    <string name="lragi">&lt;a href="https://en.wikipedia.org/wiki/Eleusine_coracana">To know more>>&lt;/a></string>
    <string name="lareca">&lt;a href="https://en.wikipedia.org/wiki/Areca">To know more>>&lt;/a></string>
    <string name="lmaize">&lt;a href="https://en.wikipedia.org/wiki/Maize">To know more>>&lt;/a></string>
    <string name="lsorghum">&lt;a href="https://en.wikipedia.org/wiki/Sorghum">To know more>>&lt;/a></string>
    <string name="lsugarcane">&lt;a href="https://en.wikipedia.org/wiki/Sugarcane">To know more>>&lt;/a></string>
    <string name="lsunflower">&lt;a href="https://en.wikipedia.org/wiki/Sunflower">To know more>>&lt;/a></string>
    <string name="lcotton">&lt;a href="https://en.wikipedia.org/wiki/Cotton">To know more>>&lt;/a></string>
    <string name="lcoconut">&lt;a href="https://en.wikipedia.org/wiki/Coconut">To know more>>&lt;/a></string>
    <string name="lcoffee">&lt;a href="https://en.wikipedia.org/wiki/Coffee">To know more>>&lt;/a></string>
    <string name="ltea">&lt;a href="https://en.wikipedia.org/wiki/Tea">To know more>>&lt;/a></string>
    <string name="lbanana">&lt;a href="https://en.wikipedia.org/wiki/Banana">To know more>>&lt;/a></string>
    <string name="lginger">&lt;a href="https://en.wikipedia.org/wiki/Ginger">To know more>>&lt;/a></string>
    <string name="lturmeric">&lt;a href="https://en.wikipedia.org/wiki/Turmeric">To know more>>&lt;/a></string>
    <string name="lgroundnut">&lt;a href="https://en.wikipedia.org/wiki/Groundnut">To know more>>&lt;/a></string>
    <string name="lrubber">&lt;a href="https://en.wikipedia.org/wiki/Rubber">To know more>>&lt;/a></string>
    <string name="lpotato">&lt;a href="https://en.wikipedia.org/wiki/Potato">To know more>>&lt;/a></string>
    <string name="lcashewnut">&lt;a href="https://en.wikipedia.org/wiki/Cashewnut">To know more>>&lt;/a></string>
    <string name="lbrinjal">&lt;a href="https://en.wikipedia.org/wiki/Brinjal">To know more>>&lt;/a></string>
    <string name="lonion">&lt;a href="https://en.wikipedia.org/wiki/Onion">To know more>>&lt;/a></string>
    <string name="lchilli">&lt;a href="https://en.wikipedia.org/wiki/Chilli">To know more>>&lt;/a></string>
    <string name="tomato">&lt;a href="https://en.wikipedia.org/wiki/Tomato">To know more>>&lt;/a></string>
    <string name="lcauliflower">&lt;a href="https://en.wikipedia.org/wiki/Cauliflower">To know more>>&lt;/a></string>
    <string name="lcapsicum">&lt;a href="https://en.wikipedia.org/wiki/Capsicum">To know more>>&lt;/a></string>
    <string name="lcabbage">&lt;a href="https://en.wikipedia.org/wiki/Cabbage">To know more>>&lt;/a></string>
    <string name="lwatermelon">&lt;a href="https://en.wikipedia.org/wiki/Watermelon">To know more>>&lt;/a></string>
    <string name="copy_right">Copyrights © %1$d</string>
    <string name="about_page_description">AgriSmart is a product which has been developed by 4 students of JNNCE in assosiation with Silfra Technologies ,under the guidance of Silfra Mentors and Dr.Majunatha P,HOD,ECE Dept.
    The Agrismart device consists of an Hardware unit and an Android App for Interaction with the Hardware </string>
    <string name="title_activity_maps_start">Map Overview</string>
    <string name="category_add_title">Please choose a category</string>
    <string name="name_spot">Name your Spot</string>
    <string name="add_description_tv">Spot description (optional)</string>
    <string name="show_on_map">Show on Map</string>
    <string name="delete_category">Delete category</string>
    <string name="delete_confirmation_category">Are you sure you want to delete</string>
    <string name="has_deleted">has been deleted.</string>
    <string name="button_menu_en">Menu</string>
    <string name="button_save_en">+</string>
    <string name="button_save_cancel">Cancel</string>
    <string name="button_save_next">Next</string>
    <string name="button_launch">Launch</string>
    <string name="category_add_new">Add new category</string>
    <string-array name="titles_example_berry">
        <item>Bilberry</item>
        <item>Blackberry</item>
        <item>Blueberry</item>
        <item>Cloudberry</item>
        <item>Cranberry</item>
        <item>Elderberry</item>
        <item>Gooseberry</item>
        <item>Lingonberry</item>
        <item>Raspberry</item>
        <item>Strawberry</item>
    </string-array>
    <string-array name="titles_example_fruit">
        <item>Apple</item>
        <item>Apricot</item>
        <item>Cherry</item>
        <item>Grape</item>
        <item>Nectarine</item>
        <item>Peach</item>
        <item>Plum</item>
        <item>Pumpkin</item>
        <item>Orange</item>
        <item>Tomato</item>
    </string-array>
    <string-array name="titles_example_fish">
        <item>Bream</item>
        <item>Carp</item>
        <item>Freshwater Eel</item>
        <item>Grayling</item>
        <item>Perch</item>
        <item>Peach</item>
        <item>Pike</item>
        <item>Roach</item>
        <item>Salmon</item>
        <item>Trout</item>
        <item>Zander</item>
    </string-array>
    <string-array name="titles_example_mushroom">
        <item>Chanterelle</item>
        <item>Field Mushroom</item>
        <item>False Morel</item>
        <item>Funnel Chanterelle</item>
        <item>Hedgehog Mushroom</item>
        <item>Horse Mushroom</item>
        <item>Penny Bun</item>
        <item>Shaggy Ink Cap</item>
    </string-array>
    <string-array name="titles_example_insects">
        <item>Bettle</item>
        <item>Bee</item>
        <item>Red Ants</item>
        <item>Brown Hopper</item>
        <item>Butterflies and Moths</item>
        <item>Maggots</item>
        <item>Grasshoppers</item>
    </string-array>
    <string-array name="titles_example_fungus">
        <item>Target spot</item>
        <item>Aphanomyces root rot</item>
        <item>Aschochyta collar rot</item>
        <item>Gummy stem blight</item>
    </string-array>
    <string-array name="titles_example_weeds">
        <item>Crabgrass</item>
        <item>Pigweed</item>
        <item>Buckhorn Plantain</item>
        <item>Field Bindweed</item>
        <item>Lamb's Quarters</item>
    </string-array>
    <string-array name="titles_example_animal">
        <item>Elephant</item>
        <item>Monkey</item>
        <item>Birds</item>
        <item>WildBoar</item>
        <item>Wild Buffalo</item>
    </string-array>
    <string name="action_search">Search</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_settings">Settings</string>
    <string name="action_about">About</string>
    <string name="today">Today</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="later">Later</string>
    <string name="wind">Wind</string>
    <string name="pressure">Pressure</string>
    <string name="humidity">Humidity</string>
    <string name="sunrise">Sunrise</string>
    <string name="sunset">Sunset</string>
    <string name="last_update">Last update:\n%s</string>
    <string name="last_update_widget">\nLast update: %s</string>
    <string name="search_title">Search for city</string>
    <string name="downloading_data">Downloading your data ...</string>
    <string name="getting_location">Getting your location ...</string>
    <string name="error_dateFormat">DATE FORMAT ERROR</string>
    <string name="setting_dateFormat">Date Format</string>
    <string name="setting_dateFormatCustom">Custom Date Format</string>
    <string name="setting_dateFormatCustom_summary">Provide the custom SimpleDateFormat string to be used</string>
    <string name="setting_lengthUnits">Length units</string>
    <string name="setting_speedUnits">Speed units</string>
    <string name="setting_tempUnits">Temperature units</string>
    <string name="setting_showTempAsInteger">Show temperature only as an integer</string>
    <string name="setting_pressureUnits">Pressure units</string>
    <string name="setting_theme">Theme</string>
    <string name="setting_auto_detect_location">Detect Location</string>
    <string name="setting_differentiateDaysByTint">Differentiate Days with Color</string>
    <string name="setting_refreshInterval">Background refresh interval</string>
    <string name="setting_unit_mps">Meters per second (m/s)</string>
</resources>