<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:padding="16dp"
    android:background="@color/menuBackgroundColor"
    android:layout_height="match_parent"
    tools:context="pesticides_map.SaveSpotCategoryActivity">

    <TextView
        android:id="@+id/category_add_title_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:text="@string/category_add_title"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="24dp" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recycler_container_save"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/category_add_title_text"
        android:layout_marginTop="13dp"
        android:scrollbars="vertical">
    </android.support.v7.widget.RecyclerView>

    <Button
        android:id="@+id/category_cancel"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:background="@color/menuButtonColor"
        android:text="@string/button_save_cancel" />

    <EditText
        android:id="@+id/addNewCategory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/category_cancel"
        android:layout_marginBottom="44dp"
        android:layout_toLeftOf="@+id/category_spinner"
        android:layout_toStartOf="@+id/category_spinner"
        android:ems="10"
        android:inputType="textPersonName" />

    <!-- Lägg till kategori-knapp-->
    <Button
        android:id="@+id/buttonAddCategory"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_alignBottom="@+id/addNewCategory"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:background="@drawable/roundbutton_save"
        android:text="@string/button_save_en"
        android:textColor="@color/menuButtonTextColor" />

    <TextView
        android:id="@+id/newCategoryTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/buttonAddCategory"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="12dp"
        android:text="@string/category_add_new" />

    <Spinner
        android:id="@+id/category_spinner"
        android:layout_width="80dp"
        android:layout_height="50dp"
        android:layout_alignBottom="@+id/addNewCategory"
        android:layout_toLeftOf="@+id/buttonAddCategory"
        android:layout_toStartOf="@+id/buttonAddCategory" />

</RelativeLayout>
